# ibkr-bot

./: .env.example  .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml
bot/: __init__.py  __main__.py  backtest.py  cli.py  config.py  indicators.py  logging_setup.py  notify.py  orchestrator.py  reports.py  signal_bus.py
reports/: momentum_failures_2026_05_08.md
scripts/: __init__.py  analyze_2026_05_08_momentum_failures.py  discover_closed_trades.py  fetch_historical_bars.py  investigate_close_only.py  measure_aggregator_to_submit.py  measure_bar_latency.py  measure_longname_match_rate.py  probe_reqmktdepth.py  run_aggregate_report.py  run_policy_comparison.py  xgn_hold_sim.py
tests/: _ibkr_test_helpers.py  conftest.py  test_advisor_agent.py  test_advisor_bootstrap.py  test_advisor_cost_tracker.py  test_advisor_event_buffer.py  test_advisor_integration.py  test_advisor_llm_client.py  test_advisor_shadow_baselines.py  test_aggregate_report_runner.py  test_aggregation.py  test_auto_flatten.py  test_backtest.py  test_bar_aggregator.py  test_book_state_tracker.py  test_cache_loader.py  test_catalyst.py  test_catalyst_classifier_bootstrap.py  test_catalyst_classifier_classifier.py  test_catalyst_classifier_llm_client.py  test_catalyst_classifier_unit.py  test_catalyst_name_extension.py  test_catalyst_override.py  test_cli.py  test_comparison_runner.py  test_config.py  test_entry_quality.py  test_events_layer_1.py  test_events_layer_2.py  test_executor.py  test_exit_advisor_apply.py  test_exit_advisor_config.py  test_exit_advisor_hook.py  test_exit_advisor_integration.py  test_exit_advisor_types.py  test_failure_modes.py  (+66 more)
(+93 files in other folders)
